--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload"
+    "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload",
+    "fresh": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload migrate:fresh"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
@@ -56,6 +57,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "payload": "^3.31.0",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
