--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "fresh": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload migrate:fresh"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@emotion/is-prop-valid": "^1.3.1",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.9.1",
     "@payloadcms/db-mongodb": "^3.31.0",
     "@payloadcms/next": "^3.31.0",
@@ -44,6 +46,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "antd": "^5.24.6",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -64,10 +68,14 @@
     "react-hook-form": "^7.55.0",
     "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.1",
+    "shenai-sdk": "file:shenai-sdk",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "uplot": "^1.6.32",
+    "uplot-react": "^1.2.2",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
